--- a/MVP/app/src/main/AndroidManifest.xml
+++ b/MVP/app/src/main/AndroidManifest.xml
@@ -13,16 +13,18 @@
             android:name=".servicehistory.ServiceHistoryActivity"
             android:label="@string/title_activity_service_history"
             android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity
+            android:name=".servicehistorydetails.ServiceHistoryDetailsActivity"
+            android:label="@string/title_activity_service_history_details"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".user.UserActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".servicehistorydetails.ServiceHistoryDetailsActivity"
-            android:label="@string/title_activity_service_history_details"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
