--- a/MVP/app/src/main/AndroidManifest.xml
+++ b/MVP/app/src/main/AndroidManifest.xml
@@ -12,19 +12,20 @@
         <activity
             android:name=".servicehistory.ServiceHistoryActivity"
             android:label="@string/title_activity_service_history"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".servicehistorydetails.ServiceHistoryDetailsActivity"
             android:label="@string/title_activity_service_history_details"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".user.UserActivity">
+        <activity android:name=".user.UserActivity"></activity>
+        <activity android:name=".Temperature.TemperatureActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Temperature.SecondActivity"></activity>
     </application>
 
 </manifest>
